--- a/ReactNP/package.json
+++ b/ReactNP/package.json
@@ -10,6 +10,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^2.1.1",
     "react": "18.3.1",
     "react-native": "0.77.0",
     "react-native-vector-icons": "^10.2.0",
