--- a/ReactNP/package.json
+++ b/ReactNP/package.json
@@ -11,10 +11,13 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^2.1.1",
+    "@reduxjs/toolkit": "^2.5.1",
     "react": "18.3.1",
     "react-native": "0.77.0",
     "react-native-vector-icons": "^10.2.0",
-    "react-native-video": "^6.10.0"
+    "react-native-video": "^6.10.0",
+    "react-redux": "^9.2.0",
+    "redux": "^5.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
